# tcc

./: README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
backend/auth/: serializers.py  views.py
backend/chatbot/: Q&A.csv  chains.py  config.py  evolution_api.py  memory.py  message_buffer.py  metrics.py  prompts.py  tests.py  tools.py  urls.py  vectorstore.py  views.py
backend/core/: settings.py  urls.py
backend/grafana/provisioning/dashboards/: chatbot-dashboard.json  dashboards.yml
backend/sensors/: models.py  serializers.py  tests.py  urls.py  views.py
backend/sensors/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_phone.py  0003_alter_user_phone.py
frontend/: .env.example  .gitignore  Dockerfile  docker-compose.yaml  index.html  package-lock.json  package.json
frontend/openai/: config.toml
frontend/openai/functions/chat-soil/: index.ts
frontend/src/: index.css
frontend/src/components/: BenefitsSection.tsx  ChatBot.tsx  Hero.tsx  ProductSection.tsx
frontend/src/pages/: Index.tsx
hardware/: README.MD  ReceiverLoraTCC.ino  SenderLoraTCC.ino
